prideti css failai

--- a/index.html
+++ b/index.html
@@ -2,22 +2,27 @@
 <html>
 <head>
     <title>Mano puslapis</title>
+    <link rel="stylesheet" href="CSS/antras.css">
+    <link rel="stylesheet" href="CSS/isdestymas.css">
+
 </head>
 <body>
 
-<div>
+<div class="red">
     1
+</div>
+<div class="green trejetukai1">
+    <div class="red">2.1</div>
+    <div>
+        <div class="green dvejetukai1">2.2.1</div>
+        <div class="green dvejetukai2">2.2.1</div>
+    </div>
 
 </div>
-<div>
-   <div>2.2.1</div>
-   <div>2.2.2</div>
-   <div>2.2.3</div>
-</div>
 
-<div>
-   <div> 3.1</div>
-    <div>3.2</div>
+<div class="green trejetukai1">
+    <div class="red trejetukai1"> 3.1</div>
+    <div class="red trejetukai2">3.2</div>
 </div>
 
 
