prideti css failai ir animacija

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Mano puslapis</title>
     <link rel="stylesheet" href="CSS/antras.css">
     <link rel="stylesheet" href="CSS/isdestymas.css">
+    <link rel="stylesheet" href="CSS/animacijos.css">
 
 </head>
 <body>
